<resources>
    <string name="app_name">UAS PPK</string>
    <!-- Strings related to login -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="pass_confrom">Retype Password</string>
    <string name="username">Username</string>
    <string name="name">Fullname</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="text_error">error message</string>
    <string name="register_question">Belum punya akun? Daftar</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="update">Update</string>
</resources>